fixed to compile with jdk1.4
git-svn-id: http://svn.vuze.com/public/client@20704 c2c1b7af-1477-405b-86ee-8aefd1fc4dd2